Fixed few layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,5 +82,15 @@ h1 {
 }
 
 h2 {
+  @apply text-2xl
+}
+
+h3 {
   @apply text-lg;
+}
+
+.full-screen-height {
+  /* 5rem page padding + 4rem navbar height */
+  /* + 2rem to account for margin so that content is centered on the screen */
+  height: calc(100dvh - (5rem + 4rem + 2rem));
 }
